<resources>
    <string name="app_name">Gamection</string>

    <!--Login-->
    <string name="user_email">Email usuario</string>
    <string name="user_password">Contraseña</string>
    <string name="user_login_button">Iniciar sesión</string>
    <string name="user_register">¿No tiene cuenta?</string>
    <string name="user_register_link">Regístrese aquí.</string>
    <!-- Register -->
    <string name="register_title">Registro</string>
    <string name="register_nombre">Nombre</string>
    <string name="register_usuario">Usuario</string>
    <string name="register_contrasena">Contraseña</string>
    <string name="register_fecha_nacimiento">Fecha de nacimiento</string>
    <string name="register_sexo">Sexo</string>
    <string-array name="register_sexo_array">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
        <item>Prefiero no decirlo</item>
    </string-array>
    <string name="register_boton_registrarse">Registrarse</string>
    <string name="register_confirmacion">¡Gracias por registrarte! Inicia sesión para acceder a tu cuenta.</string>
    <!-- Profile -->
    <string name="profile_nombre_usuario">Juan</string>
    <string name="profile_estado_perfil">Ocupado</string>
    <string name="profile_boton_editar_perfil">EDITAR PERFIL</string>
    <string name="profile_consultar_coleccion">Consultar colección</string>
    <string name="profile_juego_reciente">Juego reciente</string>
    <string name="profile_genero_favorito">Género favorito</string>
    <string name="profile_consola_favorita">Consola favorita</string>
    <string name="profile_boton_amigos">Amigos</string>
    <!-- Library -->
    <string name="library_console">Consola 1</string>
    <string name="library_genre">Género 1</string>
    <string name="library_game">Juego 1</string>

    <string-array name="library_add_game_console">
        <item>PS1</item>
        <item>PS2</item>
        <item>PS3</item>
        <item>PSP</item>
        <item>N64</item>
        <item>GameCube</item>
        <item>DS</item>
        <item>GBA</item>
        <item>Wii</item>
    </string-array>
    <!-- Friends -->
    <string name="friends__boton_name">Pepe</string>
    <string name="friends_boton_add">Agregar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>